src/mongo/embedded/capi.h


typedef struct mongo_embedded_v1_status mongo_embedded_v1_status;
MONGO_EMBEDDED_CAPI_API mongo_embedded_v1_status* MONGO_API_CALL
mongo_embedded_v1_status_create(void);
MONGO_EMBEDDED_CAPI_API void MONGO_API_CALL
mongo_embedded_v1_status_destroy(mongo_embedded_v1_status* status);
MONGO_EMBEDDED_CAPI_API int MONGO_API_CALL
mongo_embedded_v1_status_get_error(const mongo_embedded_v1_status* status);
MONGO_EMBEDDED_CAPI_API const char* MONGO_API_CALL
mongo_embedded_v1_status_get_explanation(const mongo_embedded_v1_status* status);
MONGO_EMBEDDED_CAPI_API int MONGO_API_CALL
mongo_embedded_v1_status_get_code(const mongo_embedded_v1_status* status);
typedef struct mongo_embedded_v1_lib mongo_embedded_v1_lib;
typedef struct mongo_embedded_v1_init_params mongo_embedded_v1_init_params;
typedef void(MONGO_API_CALL* mongo_embedded_v1_log_callback)(
    void* user_data, const char* message, const char* component, const char* context, int severity);
struct mongo_embedded_v1_init_params {
    const char* yaml_config;
    uint64_t log_flags;
    mongo_embedded_v1_log_callback log_callback;
    void* log_user_data;
};
MONGO_EMBEDDED_CAPI_API mongo_embedded_v1_lib* MONGO_API_CALL mongo_embedded_v1_lib_init(
    const mongo_embedded_v1_init_params* params, mongo_embedded_v1_status* status);
MONGO_EMBEDDED_CAPI_API int MONGO_API_CALL
mongo_embedded_v1_lib_fini(mongo_embedded_v1_lib* lib, mongo_embedded_v1_status* status);
typedef struct mongo_embedded_v1_instance mongo_embedded_v1_instance;
MONGO_EMBEDDED_CAPI_API mongo_embedded_v1_instance* MONGO_API_CALL
mongo_embedded_v1_instance_create(mongo_embedded_v1_lib* lib,
                                  const char* yaml_config,
                                  mongo_embedded_v1_status* status);
MONGO_EMBEDDED_CAPI_API int MONGO_API_CALL mongo_embedded_v1_instance_destroy(
    mongo_embedded_v1_instance* instance, mongo_embedded_v1_status* status);
typedef struct mongo_embedded_v1_client mongo_embedded_v1_client;
MONGO_EMBEDDED_CAPI_API mongo_embedded_v1_client* MONGO_API_CALL mongo_embedded_v1_client_create(
    mongo_embedded_v1_instance* instance, mongo_embedded_v1_status* status);
MONGO_EMBEDDED_CAPI_API int MONGO_API_CALL mongo_embedded_v1_client_destroy(
    mongo_embedded_v1_client* client, mongo_embedded_v1_status* status);
MONGO_EMBEDDED_CAPI_API int MONGO_API_CALL
mongo_embedded_v1_client_invoke(mongo_embedded_v1_client* client,
                                const void* input,
                                size_t input_size,
                                void** output,
                                size_t* output_size,
                                mongo_embedded_v1_status* status);